@@ -3,9 +3,9 @@
 <li class="icon icon-doc-full-inverse">
     <a href="{% url 'wagtaildocs:index' %}">
     {% blocktrans count counter=total_docs with total_docs|intcomma as total %}
-        <span>{{ total }}</span> Document
+        <span>{{ total }}</span> Document <span class="visuallyhidden">created in {{ site_name }}</span>
     {% plural %}
-        <span>{{ total }}</span> Documents
+        <span>{{ total }}</span> Documents <span class="visuallyhidden">created in {{ site_name }}</span>
     {% endblocktrans %}
     </a>
 </li>
